log
Wed 13 Sep 2023 07:21:57 AM UTC: 
 tests:  1|8
total_score: 0/70
20b22ea
Wed 13 Sep 2023 07:30:13 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
7a69e85
Wed 13 Sep 2023 07:31:26 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:14: error: unused variable ‘map’ [-Werror=unused-variable]
   40 |     TreeMap *map = (TreeMap *)malloc(sizeof(TreeMap));
      |              ^~~
cc1: all warnings being treated as errors
Compilation failed
a9cb1af
Wed 13 Sep 2023 07:32:08 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
1f23440
Wed 13 Sep 2023 07:32:45 AM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:10: error: ‘TreeMap’ has no member named ‘curent’; did you mean ‘current’?
   43 |     map->curent = NULL
      |          ^~~~~~
      |          current
treemap.c:44:5: error: expected ‘;’ before ‘map’
   44 |     map->lower_than = lt;
      |     ^~~
Compilation failed
ceeb953
Wed 13 Sep 2023 07:33:27 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
81e0309
Wed 13 Sep 2023 07:33:58 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
e086204
Wed 13 Sep 2023 07:35:13 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:77:15: error: unused variable ‘node’ [-Werror=unused-variable]
   77 |     TreeNode *node = tree->root;
      |               ^~~~
cc1: all warnings being treated as errors
Compilation failed
fff9454
Wed 13 Sep 2023 07:36:25 AM UTC: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:45: error: ‘Pair’ has no member named ‘ke’; did you mean ‘key’?
   79 |         if (is_equal(tree, key, node->pair->ke)) {
      |                                             ^~
      |                                             key
treemap.c:80:19: error: ‘TreeMap’ has no member named ‘currnt’; did you mean ‘current’?
   80 |             tree->currnt = node;
      |                   ^~~~~~
      |                   current
treemap.c:82:47: error: ‘pair’ undeclared (first use in this function); did you mean ‘Pair’?
   82 |         } else if (tree->lower_than(key, node>pair->key)) {
      |                                               ^~~~
      |                                               Pair
treemap.c:82:47: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:83:13: error: ‘ode’ undeclared (first use in this function); did you mean ‘node’?
   83 |             ode = node->left;
      |             ^~~
      |             node
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
ae6ad0c
